--- a/AqueceBar/WebContent/css/style.css
+++ b/AqueceBar/WebContent/css/style.css
@@ -1586,7 +1586,7 @@ body {
 /* 	border: 5px solid #53687E; */
 }
 
-.form-style-4 input[type=submit], .form-style-4 input[type=button],
+.form-style-4 input[type=submit], .form-style-4 input[type=button], .form-style-4 input[type=password],
 	.form-style-4 input[type=text], .form-style-4 input[type=email],
 	.form-style-4 textarea, .form-style-4 label {
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -1605,7 +1605,7 @@ body {
 	width: 150px;
 }
 
-.form-style-4 input[type=text], .form-style-4 input[type=email] {
+.form-style-4 input[type=text], .form-style-4 input[type=email],.form-style-4 input[type=password] {
 	background: transparent;
 	border: none;
 	border-bottom: 1px dashed #83A4C5;
@@ -1629,7 +1629,7 @@ body {
 }
 
 .form-style-4 textarea:focus, .form-style-4 input[type=text]:focus,
-	.form-style-4 input[type=email]:focus, .form-style-4 input[type=email] :focus
+	.form-style-4 input[type=email]:focus, .form-style-4 input[type=email]:focus,.form-style-4 input[type=password] :focus
 	{
 	border-bottom: 1px dashed #D9FFA9;
 }
